# proj

./: .gitignore  dune-project  flake.nix  proj.opam
lib/db/: dune  project.ml  project.mli
lib/ui/: dune  state.ml  state.mli  ui.ml
